<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="top|left"
    android:background="#e3edc2">
    
   <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:gravity="center_horizontal"
        android:background="@color/DarkGreen"
        android:layout_marginRight="0dp">   
        <ImageView 
            android:id="@+id/cetateImage"
            android:src="@drawable/cetate_image"
            android:layout_width="200dp"
            android:layout_height="150dp"
			android:scaleType="fitXY"
			android:paddingLeft="0dp"/>
        
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
    >
        
         <Button
        android:id="@+id/checkIn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="33dp"
        android:text="@string/check_in_button"
        style="@style/btnStyleBeige"
        android:minHeight="40dp"
        android:minWidth="70dp"
        android:layout_margin="20dp"
        android:onClick="checkIn"
        
      />
         
          <Button
        android:id="@+id/map"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/map_button"
        android:onClick="map"
        style="@style/btnStyleBeige"
        android:minHeight="40dp"
        android:minWidth="70dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
      />
    </LinearLayout>
        
       
   </TableRow>
   
   <TableRow 
       android:id="@+id/tableRow3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:gravity="center_horizontal"
        android:layout_marginRight="0dp">   
        
        <ImageView 
            android:id="@+id/cetateImage2"
            android:src="@drawable/attractions_logo"
            android:layout_width="40dp"
            android:layout_height="40dp"
			android:scaleType="fitXY"
			android:paddingLeft="10dp"
			android:paddingTop="10dp"/>
        
       <TextView 
            android:id="@+id/cetateName"
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
	        android:text="@string/title_activity_cetate"
	        android:textStyle="bold"
	        android:layout_gravity="center"
	        android:paddingLeft="20dp"
	        android:textSize="20sp"
	        android:textColor="@color/Black"
		/>
       
   </TableRow>
   
   <TextView 
       android:id = "@+id/cetateDesc"
       android:layout_gravity="center"
       android:text = "@string/cetate_desc"
       android:textColor="@color/Black"
       android:textStyle="bold"
       android:textSize="15sp"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:padding="20dp"
       />
   
   <TableRow 
       android:id="@+id/tableRow4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:gravity="center_horizontal"
        android:layout_marginRight="0dp">   
        
        <ImageView 
            android:id="@+id/contact"
            android:src="@drawable/info"
            android:layout_width="30dp"
            android:layout_height="30dp"
			android:scaleType="fitXY"
			android:paddingLeft="10dp"
			android:paddingTop="10dp"/>
        
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
    >
        
       <TextView 
            android:id="@+id/cetateContact"
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
	        android:text="@string/cetate_contact"
	        android:textStyle="bold"
	        android:layout_gravity="center"
	        android:paddingLeft="20dp"
	        android:textSize="15sp"
	        android:textColor="@color/Black"
		/>
       
       <TextView 
            android:id="@+id/cetateContact2"
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
	        android:text="@string/cetate_contact2"
	        android:textStyle="bold"
	        android:layout_gravity="center"
	        android:paddingLeft="20dp"
	        android:textSize="15sp"
	        android:textColor="@color/Black"
		/>

       </LinearLayout>
       
   </TableRow>
   
    <Button
        android:id="@+id/thoughts"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/thoughts_button"
        style="@style/btnStyleBeige"
        android:minHeight="40dp"
        android:minWidth="70dp"
        android:layout_margin="20dp"
        android:onClick="add"
      />

</LinearLayout>
